bug 770564 - speed up HyperTextAccessible::GetSpellTextAttribute() r=surkov